2005-10-14  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/BoxView.java:
	(preferenceChanged): New method (overrides method in View).  Set flag 
	indicating that cached layout information is invalid, then call super
	implementation.

2005-10-14  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/CompositeView.java: Minor doc fixes.
	* javax/swing/text/BoxView.java: Minor doc fixes.

2005-10-14  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTree.java
	(getAccessibleContext): Fixed API docs, and returned the correct value.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(updateCachedPreferredSize): Fixed parameter passed to isLeaf, node should
	be passed in and not a path.

2005-10-14  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/DefaultCaret.java:
	(ALWAYS_UPDATE): New field.
	(NEVER_UPDATE): New field.
	(UPDATE_WHEN_ON_EDIT): New field.
	(insertUpdate): Fixed docs.  Only update the dot if the policy is
	ALWAYS_UPDATE or if the policy is UPDATE_WHEN_ON_EDT and the event
	was generated on the Event Dispatch thread.
	(removeUpdate): Fixed docs.  Only update the dot if the policy is
	ALWAYS_UPDATE, if the policy is UPDATE_WHEN_ON_EDT and the event was 
	generated on the Event Dispatch thread, or if the document length 
	has become less than the current dot position.
	(setUpdatePolicy): New method.
	(getUpdatePolicy): New method.
	
2005-10-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/BoxLayout.java
	(layoutContainer): Perform layout inside the container's treeLock.
	Respect the insets of the container.

2005-10-14  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTree.java
	(getAccessibleSelectionCount): Fixed API documentation.
	(getScrollableTracksViewportWidth): Was using height instead of
	width, fixed this.
	(getScrollableTracksViewportHeight): Likewise.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(BasicTreeUI): Initialized validCachedPreferredSize.
	(updateCachedPreferredSize): Implemented.