@@ -1,5 +1,11 @@
 2005-10-14  Anthony Balkissoon  <abalkiss@redhat.com>
 
+	* javax/swing/text/PlainView.java:
+	(getTabSize): Check the Document's properties for
+	PlainDocument.tabSizeAttribute before defaulting to 8.
+
+2005-10-14  Anthony Balkissoon  <abalkiss@redhat.com>
+
 	* javax/swing/text/BoxView.java:
 	(preferenceChanged): New method (overrides method in View).  Set flag 
 	indicating that cached layout information is invalid, then call super
